# elevator-manager

./: CMakeLists.txt  ElevatorManager.pro  README.md  elevator.cpp  elevator.h  elevatormanager.cpp  elevatormanager.h  elevatormanager.ui  main.cpp  manager.cpp  manager.h  passenger.cpp  passenger.h  settings.cpp  settings.h
src/: main.cpp
src/elevator/: direction.h  elevator.cpp  elevator.h
src/main/: elevatormanager.cpp  elevatormanager.h  elevatormanager.ui
src/passenger/: passenger.cpp  passenger.h
src/settings/: settings.cpp  settings.h  settings.ui
tests/: CMakeLists.txt  elevator_manager_test.cpp  elevator_test.cpp
